translated surgery staff

--- a/es/hub/transplant/surgery/staff/anesthesia.html
+++ b/es/hub/transplant/surgery/staff/anesthesia.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Surgery Staff: Anesthesiologist</title>
+  <title>Personal Quirúrgico: Anestesiólogo</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -18,52 +18,53 @@
     <div data-include="/includes_es/transplant-surgery-subnav.html"></div>
     <div data-include="/includes_es/transplant-surgery-staff-subnav.html"></div>
 
-<h1>Anesthesiologist</h1>
+<h1>Anestesiólogo</h1>
 
-<h2>Short Description</h2>
+<h2>Descripción breve</h2>
 <p>
-  The anesthesiologist keeps you safely asleep and pain-controlled during surgery. They manage your airway,
-  breathing, blood pressure, fluids, temperature, and nausea prevention so the new kidney has the best start.
+  El anestesiólogo te mantiene seguro, dormido y con el dolor controlado durante la cirugía. Maneja tu vía aérea,
+  respiración, presión arterial, líquidos, temperatura y prevención de náuseas para que el nuevo riñón tenga el mejor inicio.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades principales</h2>
 <ul>
-  <li><strong>General anesthesia:</strong> place a breathing tube, monitor oxygen and heart rhythm, and keep you fully asleep and pain-free.</li>
-  <li><strong>Blood pressure & fluids:</strong> maintain targets and give fluids/medicines so blood flow to the kidney stays steady.</li>
-  <li><strong>Lines & monitoring:</strong> start IVs; sometimes place an arterial line for close blood-pressure tracking.</li>
-  <li><strong>Temperature:</strong> use warmers to prevent getting cold (hypothermia slows healing and can raise risks).</li>
-  <li><strong>Pain & nausea plan:</strong> multimodal pain control and anti-nausea medicines during and after surgery.</li>
-  <li><strong>Safe wake-up:</strong> remove the breathing tube when you’re ready and hand off to the PACU team with a clear plan.</li>
+  <li><strong>Anestesia general:</strong> colocar un tubo de respiración, monitorear oxígeno y ritmo cardíaco, y mantenerte completamente dormido y sin dolor.</li>
+  <li><strong>Presión arterial y líquidos:</strong> mantener objetivos y administrar líquidos/medicinas para que el flujo sanguíneo al riñón sea estable.</li>
+  <li><strong>Líneas y monitoreo:</strong> iniciar vías intravenosas; a veces colocar una línea arterial para un control cercano de la presión arterial.</li>
+  <li><strong>Temperatura:</strong> usar calentadores para evitar que bajes de temperatura (la hipotermia retrasa la curación y aumenta riesgos).</li>
+  <li><strong>Plan de dolor y náuseas:</strong> control multimodal del dolor y medicinas contra náuseas durante y después de la cirugía.</li>
+  <li><strong>Despertar seguro:</strong> retirar el tubo de respiración cuando estés listo y entregar el caso al equipo de recuperación (PACU) con un plan claro.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas con los que trabajan</h2>
 <ul>
-  <li><strong>Airway:</strong> prior neck/jaw problems, sleep apnea, or dental issues (loose teeth, bridges) that affect intubation.</li>
-  <li><strong>Nausea risk:</strong> past post-op nausea/vomiting (PONV), motion sickness—extra prevention can be given.</li>
-  <li><strong>Blood pressure swings:</strong> treat lows/highs quickly to protect the kidney and your heart/brain.</li>
-  <li><strong>Pain control:</strong> adjust meds; some centers add numbing blocks near the incision when appropriate.</li>
-  <li><strong>IV access:</strong> difficult veins, prior fistulas/grafts to avoid, or need for additional monitoring lines.</li>
-  <li><strong>Allergies & reactions:</strong> antibiotic or latex allergy, prior anesthesia problems—plan is tailored.</li>
+  <li><strong>Vía aérea:</strong> problemas previos de cuello/mandíbula, apnea del sueño o problemas dentales (dientes flojos, prótesis) que afectan la intubación.</li>
+  <li><strong>Riesgo de náusea:</strong> antecedentes de náuseas/vómitos postoperatorios, mareo — se puede dar prevención adicional.</li>
+  <li><strong>Cambios de presión arterial:</strong> tratar bajadas/subidas rápidamente para proteger el riñón y el corazón/cerebro.</li>
+  <li><strong>Control del dolor:</strong> ajustar medicinas; en algunos centros se agregan bloqueos nerviosos cerca de la incisión.</li>
+  <li><strong>Acceso intravenoso:</strong> venas difíciles, accesos previos de diálisis que evitar, o necesidad de líneas de monitoreo adicionales.</li>
+  <li><strong>Alergias y reacciones:</strong> alergia a antibióticos o látex, problemas previos con anestesia — el plan se adapta a ti.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo acudir a ellos</h2>
 <ul>
-  <li><strong>Pre-op visit or call:</strong> review health history, prior anesthesia experiences, medicines, and fasting instructions.</li>
-  <li><strong>Day of surgery:</strong> confirm last food/drink time, last dialysis date/time (if applicable), and morning meds you took/held.</li>
-  <li><strong>Bring/tell:</strong> medication list with exact times, CPAP machine (if you use one), allergies, dental issues, past nausea or difficult airways, and any heart/lung problems.</li>
+  <li><strong>Visita o llamada preoperatoria:</strong> revisar historial médico, experiencias previas con anestesia, medicamentos e instrucciones de ayuno.</li>
+  <li><strong>Día de la cirugía:</strong> confirmar última ingesta de alimentos/bebidas, fecha/hora de la última diálisis (si aplica), y medicinas que tomaste o suspendiste en la mañana.</li>
+  <li><strong>Llevar/decir:</strong> lista de medicamentos con horarios exactos, máquina CPAP (si usas), alergias, problemas dentales, antecedentes de náusea o vías aéreas difíciles, y cualquier problema cardíaco/pulmonar.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo que no manejan (límites)</h2>
 <ul>
-  <li>They don’t set your long-term transplant medicines or clinic follow-up—your transplant team does.</li>
-  <li>They don’t manage insurance, refills, or forms—coordinators and the inpatient team handle those.</li>
-  <li>After you leave the recovery room, your first contact is the inpatient/transplant unit nurse; they loop in anesthesia if needed.</li>
+  <li>No establecen tus medicamentos de trasplante a largo plazo ni el seguimiento en clínica — eso lo hace tu equipo de trasplante.</li>
+  <li>No gestionan seguros, recetas o formularios — eso lo manejan los coordinadores y el equipo de hospitalización.</li>
+  <li>Después de salir de la sala de recuperación, tu primer contacto es el enfermero/a de la unidad de trasplante/hospitalización; ellos llaman a anestesia si es necesario.</li>
 </ul>
 
-<p class="disclaimer">Informational only; practices vary by center. Follow your team’s specific instructions.</p>
+<p class="disclaimer">Solo con fines informativos; las prácticas varían según el centro. Sigue siempre las instrucciones específicas de tu equipo.</p>
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
