--- a/es/hub/transplant/surgery/staff/index.html
+++ b/es/hub/transplant/surgery/staff/index.html
@@ -12,7 +12,7 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Transplant Staff - Kidney Transplant Hub</title>
+  <title>Personal Quirúrgico - Centro de Trasplante Renal</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -24,55 +24,53 @@
   <div data-include="/includes_es/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes_es/transplant-subnav.html"></div>
-<div data-include="/includes_es/transplant-surgery-subnav.html"></div>
-<div data-include="/includes_es/transplant-surgery-staff-subnav.html"></div>
+    <div data-include="/includes_es/transplant-surgery-subnav.html"></div>
+    <div data-include="/includes_es/transplant-surgery-staff-subnav.html"></div>
 
-<h1>Surgery Staff</h1>
-<p>These are the people you’ll meet in the operating room and right after. Each role has a clear job so the surgery runs smoothly and safely.</p>
+<h1>Personal Quirúrgico</h1>
+<p>Estas son las personas que verás en el quirófano y justo después. Cada rol tiene funciones claras para que la cirugía sea segura y fluida.</p>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/surgery/staff/surgeon.html" data-evt="surgery-staff:surgeon">Transplant Surgeon</a></h2>
-  <p>Leads the operation, connects the kidney to your blood vessels and bladder, and manages any surgical issues.</p>
+  <h2><a href="/es/hub/transplant/surgery/staff/surgeon.html" data-evt="surgery-staff:surgeon">Cirujano de Trasplante</a></h2>
+  <p>Lidera la operación, conecta el riñón a tus vasos sanguíneos y vejiga, y maneja cualquier complicación quirúrgica.</p>
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/surgery/staff/anesthesia.html" data-evt="surgery-staff:anesthesia">Anesthesiologist</a></h2>
-  <p>Gives anesthesia (you’re fully asleep), controls pain and nausea, and keeps breathing, blood pressure, and fluids stable.</p>
+  <h2><a href="/es/hub/transplant/surgery/staff/anesthesia.html" data-evt="surgery-staff:anesthesia">Anestesiólogo</a></h2>
+  <p>Administra la anestesia (estarás completamente dormido), controla dolor y náuseas, y mantiene estables la respiración, la presión arterial y los líquidos.</p>
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/surgery/staff/or-nurse.html" data-evt="surgery-staff:or-nurse">OR Nurse (Scrub)</a></h2>
-  <p>Sets up sterile instruments, assists the surgeon, and keeps the sterile field safe throughout the case.</p>
+  <h2><a href="/es/hub/transplant/surgery/staff/or-nurse.html" data-evt="surgery-staff:or-nurse">Enfermero/a de Quirófano (Instrumentista)</a></h2>
+  <p>Prepara los instrumentos estériles, asiste al cirujano y protege el campo estéril durante toda la cirugía.</p>
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/surgery/staff/circulating-nurse.html" data-evt="surgery-staff:circulating">Circulating Nurse</a></h2>
-  <p>Runs the room, documents, brings supplies, coordinates with your family, and handles safety checks.</p>
+  <h2><a href="/es/hub/transplant/surgery/staff/circulating-nurse.html" data-evt="surgery-staff:circulating">Enfermero/a Circulante</a></h2>
+  <p>Coordina el quirófano, documenta, consigue suministros, se comunica con tu familia y supervisa las verificaciones de seguridad.</p>
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/surgery/staff/pacu-nurse.html" data-evt="surgery-staff:pacu">PACU Nurse</a></h2>
-  <p>Cares for you as you wake up—treats pain and nausea, watches vitals and urine, and gets you ready for your room.</p>
+  <h2><a href="/es/hub/transplant/surgery/staff/pacu-nurse.html" data-evt="surgery-staff:pacu">Enfermero/a de Recuperación (PACU)</a></h2>
+  <p>Te cuida mientras despiertas: trata dolor y náuseas, controla signos vitales y orina, y te prepara para pasar a tu habitación.</p>
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/surgery/staff/inpatient-nurse.html" data-evt="surgery-staff:inpatient">Inpatient/Transplant Unit Nurse</a></h2>
-  <p>Monitors labs and urine, manages lines and drains, helps with early walking, and reinforces medication teaching.</p>
+  <h2><a href="/es/hub/transplant/surgery/staff/inpatient-nurse.html" data-evt="surgery-staff:inpatient">Enfermero/a de Hospitalización/Unidad de Trasplante</a></h2>
+  <p>Monitorea laboratorios y orina, maneja líneas y drenajes, ayuda a caminar temprano y refuerza la enseñanza de medicamentos.</p>
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/surgery/staff/inpatient-tech.html" data-evt="surgery-staff:inpatient-tech">Inpatient Tech (PCT/CNA)</a></h2>
-  <p>Checks vitals and urine/drain output, helps you walk safely, assists with hygiene, and keeps your room set for smooth recovery.</p>
+  <h2><a href="/es/hub/transplant/surgery/staff/inpatient-tech.html" data-evt="surgery-staff:inpatient-tech">Técnico/a de Hospitalización (PCT/CNA)</a></h2>
+  <p>Controla signos vitales y salida de orina/drenajes, te ayuda a caminar con seguridad, apoya con la higiene y mantiene tu habitación lista para una recuperación fluida.</p>
 </section>
-
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/surgery/staff/physical-therapist.html" data-evt="surgery-staff:pt">Physical Therapist</a></h2>
-  <p>Gets you moving safely after surgery—bed mobility, walking, stairs, and home-safety planning before discharge.</p>
+  <h2><a href="/es/hub/transplant/surgery/staff/physical-therapist.html" data-evt="surgery-staff:pt">Fisioterapeuta</a></h2>
+  <p>Te ayuda a moverte con seguridad después de la cirugía: moverte en la cama, caminar, subir escaleras y planificar la seguridad en casa antes del alta.</p>
 </section>
 
-
-<p class="disclaimer">Informational only; titles and responsibilities vary by center.</p>
+<p class="disclaimer">Solo con fines informativos; los títulos y responsabilidades varían según el centro.</p>
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
