--- a/es/hub/transplant/surgery/staff/inpatient-nurse.html
+++ b/es/hub/transplant/surgery/staff/inpatient-nurse.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Surgery Staff: PACU/Inpatient Nurse</title>
+  <title>Personal Quirúrgico: Enfermero/a de Hospitalización/Unidad de Trasplante</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -18,60 +18,60 @@
     <div data-include="/includes_es/transplant-surgery-subnav.html"></div>
     <div data-include="/includes_es/transplant-surgery-staff-subnav.html"></div>
 
-<h1>Inpatient/Transplant Unit Nurse</h1>
+<h1>Enfermero/a de Hospitalización / Unidad de Trasplante</h1>
 
-<h2>Short Description</h2>
+<h2>Descripción breve</h2>
 <p>
-  The inpatient (transplant unit) nurse cares for you after surgery on the floor. They check you in from PACU,
-  monitor vitals, urine, and pain, manage lines and drains, teach your new routines, and keep you safe and steady.
+  El enfermero/a de hospitalización (unidad de trasplante) te cuida después de la cirugía en la planta. Te recibe desde la sala de recuperación (PACU),
+  controla signos vitales, orina y dolor, maneja líneas y drenajes, enseña tus nuevas rutinas y mantiene tu seguridad y estabilidad.
 </p>
 
 <div class="callout">
-  <p><strong>That first handoff:</strong> when you arrive on the unit, your nurse orients you to the room, reviews the plan
-  for the next few days, and makes sure pain, nausea, and safety are under control. It sets the tone for recovery.</p>
+  <p><strong>Esa primera entrega:</strong> cuando llegas a la unidad, tu enfermero/a te orienta en la habitación, repasa el plan
+  para los próximos días y se asegura de que el dolor, las náuseas y la seguridad estén bajo control. Marca el inicio de tu recuperación.</p>
 </div>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades principales</h2>
 <ul>
-  <li><strong>Admission check:</strong> review allergies, meds, pain level, incision/lines, and fall risk; set call-light and safety plan.</li>
-  <li><strong>Monitoring:</strong> blood pressure, oxygen, heart rate, temperature, urine output, weight, and labs as ordered.</li>
-  <li><strong>Pain & nausea:</strong> give and adjust meds per orders; escalate if control isn’t adequate.</li>
-  <li><strong>Lines & devices:</strong> Foley, IVs, JP drain, wound vac—check, secure, measure output, and teach basics.</li>
-  <li><strong>Early mobility & breathing:</strong> help you walk in the hall, use the incentive spirometer, and prevent clots.</li>
-  <li><strong>Medication teaching:</strong> names, timing, trough-lab timing (draw before morning dose), what to do if a dose is late.</li>
-  <li><strong>Coordination:</strong> relay changes to the providers; help schedule tests, consults, and discharge teaching.</li>
+  <li><strong>Admisión:</strong> revisar alergias, medicamentos, nivel de dolor, incisión/líneas y riesgo de caídas; configurar el timbre de llamada y el plan de seguridad.</li>
+  <li><strong>Monitoreo:</strong> presión arterial, oxígeno, frecuencia cardíaca, temperatura, producción de orina, peso y análisis según órdenes.</li>
+  <li><strong>Dolor y náuseas:</strong> administrar y ajustar medicamentos según indicación; escalar si no hay buen control.</li>
+  <li><strong>Líneas y dispositivos:</strong> sonda Foley, vías IV, drenaje JP, terapia de vacío en heridas—revisar, asegurar, medir salidas y enseñar lo básico.</li>
+  <li><strong>Movilización y respiración tempranas:</strong> ayudarte a caminar en el pasillo, usar el espirómetro incentivador y prevenir coágulos.</li>
+  <li><strong>Enseñanza de medicamentos:</strong> nombres, horarios, toma de niveles en sangre antes de la dosis matutina, y qué hacer si una dosis se retrasa.</li>
+  <li><strong>Coordinación:</strong> comunicar cambios a los médicos; ayudar a programar estudios, interconsultas y enseñanza para el alta.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas con los que trabajan</h2>
 <ul>
-  <li><strong>Pain not controlled</strong> or pain that spikes with movement—update the team for better options.</li>
-  <li><strong>Nausea/vomiting</strong> that interferes with meds or eating—treat and adjust timing.</li>
-  <li><strong>Low/high urine output</strong>, Foley kinks, or cloudy urine—assess and notify the provider.</li>
-  <li><strong>Blood pressure swings</strong> or dizziness—safety first, then medication/fluids per orders.</li>
-  <li><strong>Wound/drain concerns:</strong> redness, drainage, odor, vacuum alarms—troubleshoot and escalate.</li>
-  <li><strong>Sleep & fatigue:</strong> cluster care, quiet hours, and simple routines so you can rest.</li>
+  <li><strong>Dolor no controlado</strong> o dolor que aumenta al moverse — informar al equipo para mejores opciones.</li>
+  <li><strong>Náusea/vómito</strong> que interfiere con medicación o alimentación — tratar y ajustar horarios.</li>
+  <li><strong>Baja/alta producción de orina</strong>, sondas dobladas o orina turbia — evaluar y notificar al médico.</li>
+  <li><strong>Variaciones de presión arterial</strong> o mareos — seguridad primero, luego medicación/líquidos según indicación.</li>
+  <li><strong>Problemas de herida/drenajes:</strong> enrojecimiento, secreción, mal olor, alarmas de vacío — revisar y escalar.</li>
+  <li><strong>Sueño y fatiga:</strong> organizar cuidados, establecer horas de silencio y rutinas simples para favorecer el descanso.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo acudir a ellos</h2>
 <ul>
-  <li><strong>During your stay:</strong> use the call button for pain, nausea, help to the bathroom, or if anything feels wrong.</li>
-  <li><strong>Daily:</strong> ask about your goals (walks, spirometer, lines coming out), lab timing, and the plan for tomorrow.</li>
-  <li><strong>Before discharge:</strong> review your med schedule, first lab/clinic dates, wound care, drain/stent plans, and who to call from home.</li>
-  <li><strong>After discharge:</strong> your first contact is the transplant clinic/nurse coordinator; the unit nurse doesn’t follow you at home.</li>
+  <li><strong>Durante tu estancia:</strong> usa el timbre de llamada para dolor, náusea, ayuda para ir al baño o si algo no se siente bien.</li>
+  <li><strong>Diariamente:</strong> pregunta por tus objetivos (caminatas, espirómetro, retiro de líneas), horarios de análisis y el plan para el día siguiente.</li>
+  <li><strong>Antes del alta:</strong> repasa tu esquema de medicamentos, fechas de tu primer análisis/cita, cuidados de heridas, planes para drenajes/stents y a quién llamar desde casa.</li>
+  <li><strong>Después del alta:</strong> tu primer contacto es la clínica de trasplante/enfermero/a coordinador; el enfermero/a de la unidad no te sigue en casa.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo que no manejan (límites)</h2>
 <ul>
-  <li>They don’t set long-term doses or change immunosuppression independently—providers do.</li>
-  <li>They don’t handle insurance approvals, refills, or work/benefit forms—coordinator/financial/social work handle those.</li>
-  <li>They don’t manage outpatient concerns after you leave—call the clinic/on-call line as directed.</li>
+  <li>No ajustan dosis a largo plazo ni cambian inmunosupresores de forma independiente — eso lo hacen los médicos.</li>
+  <li>No gestionan aprobaciones de seguro, recetas ni formularios laborales/beneficios — eso corresponde al coordinador/financiero/trabajo social.</li>
+  <li>No atienden problemas ambulatorios después del alta — llama a la clínica/línea de guardia según indicación.</li>
 </ul>
 
-<p class="disclaimer">Informational only; titles and workflows vary by hospital. Follow your team’s specific instructions.</p>
-
+<p class="disclaimer">Solo con fines informativos; los títulos y flujos de trabajo varían según el hospital. Sigue siempre las instrucciones específicas de tu equipo.</p>
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
