--- a/es/hub/transplant/surgery/staff/inpatient-tech.html
+++ b/es/hub/transplant/surgery/staff/inpatient-tech.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Surgery Staff: PACU/Inpatient Nurse</title>
+  <title>Personal Quirúrgico: Técnico/a de Hospitalización / Unidad de Trasplante (PCT/CNA)</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -18,55 +18,54 @@
     <div data-include="/includes_es/transplant-surgery-subnav.html"></div>
     <div data-include="/includes_es/transplant-surgery-staff-subnav.html"></div>
 
-<h1>Inpatient/Transplant Unit Tech (PCT/CNA)</h1>
+<h1>Técnico/a de Hospitalización / Unidad de Trasplante (PCT/CNA)</h1>
 
-<h2>Short Description</h2>
+<h2>Descripción breve</h2>
 <p>
-  The inpatient tech supports your day-to-day care on the unit. They check vitals, measure urine and drain output,
-  help you walk safely, assist with hygiene, and keep you and your room set up for a smooth recovery.
+  El técnico/a de hospitalización apoya tu cuidado diario en la unidad. Controla signos vitales, mide la orina y la salida de drenajes,
+  te ayuda a caminar con seguridad, asiste con la higiene y mantiene tu habitación organizada para una recuperación fluida.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades principales</h2>
 <ul>
-  <li><strong>Vitals & monitoring:</strong> blood pressure, pulse, oxygen, temperature, pain scores—reporting changes to the nurse.</li>
-  <li><strong>Intake & output:</strong> measure urine from the Foley, record drain/JP bulb amounts, track fluids you drink.</li>
-  <li><strong>Mobility & safety:</strong> assist to chair/bathroom, hallway walks, fall-risk precautions, bed/chair alarms as ordered.</li>
-  <li><strong>Comfort & hygiene:</strong> help with bathing, oral care, fresh linens, dressing changes setup, and room organization.</li>
-  <li><strong>Equipment checks:</strong> ensure SCDs (leg pumps) are on, call-light reachable, and devices secured before walking.</li>
-  <li><strong>Glucose & weights:</strong> point-of-care blood sugars (if ordered) and daily weights for fluid tracking.</li>
-  <li><strong>Transport & logistics:</strong> help you get to tests and bring needed supplies to the room.</li>
+  <li><strong>Signos vitales y monitoreo:</strong> presión arterial, pulso, oxígeno, temperatura, escala de dolor—informando cambios al enfermero/a.</li>
+  <li><strong>Ingresos y egresos:</strong> medir orina de la sonda Foley, registrar cantidades de drenajes/JP y llevar control de los líquidos que bebes.</li>
+  <li><strong>Movilidad y seguridad:</strong> ayudarte a pasar a la silla/baño, caminar en el pasillo, aplicar precauciones de caídas y configurar alarmas de cama/silla según órdenes.</li>
+  <li><strong>Comodidad e higiene:</strong> asistencia con baño, cuidado oral, ropa de cama limpia, preparación para cambios de apósitos y organización de la habitación.</li>
+  <li><strong>Revisión de equipos:</strong> asegurar que las botas de compresión (SCDs) estén en funcionamiento, que el timbre esté al alcance y que los dispositivos estén seguros antes de caminar.</li>
+  <li><strong>Glucosa y peso:</strong> controles de glucosa en el punto de atención (si se indican) y peso diario para seguimiento de líquidos.</li>
+  <li><strong>Transporte y logística:</strong> ayudarte a llegar a pruebas y traer suministros necesarios a la habitación.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas con los que trabajan</h2>
 <ul>
-  <li><strong>Low/changed urine output</strong> or a <strong>kinked Foley</strong>—they check tubing and notify the nurse.</li>
-  <li><strong>Drain problems:</strong> JP bulb not compressed, increased or cloudy output—measure and alert the nurse.</li>
-  <li><strong>Dizziness or weakness</strong> when standing—assist back to bed/chair and notify the nurse.</li>
-  <li><strong>Line safety:</strong> IV lines caught on bed/rail; help reposition and secure before walking.</li>
-  <li><strong>High/low readings:</strong> out-of-range vitals or blood sugars—report quickly to the nurse.</li>
+  <li><strong>Baja/cambio en la orina</strong> o <strong>sonda Foley doblada</strong> — revisan el tubo y notifican al enfermero/a.</li>
+  <li><strong>Problemas con drenajes:</strong> bulbo JP sin compresión, aumento o aspecto turbio en la salida — lo miden y avisan al enfermero/a.</li>
+  <li><strong>Mareos o debilidad</strong> al ponerse de pie — ayudan a regresar a la cama/silla y notifican al enfermero/a.</li>
+  <li><strong>Seguridad de líneas:</strong> vías IV atrapadas en cama/baranda; ayudan a reacomodar y asegurar antes de caminar.</li>
+  <li><strong>Valores fuera de rango:</strong> signos vitales o glucosa anormales — los reportan rápidamente al enfermero/a.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo acudir a ellos</h2>
 <ul>
-  <li>Use the call button for help to the bathroom or hallway walks.</li>
-  <li>Ask for fresh linens, hygiene supplies, or help repositioning in bed.</li>
-  <li>Let them know if the Foley isn’t draining, the JP bulb won’t stay compressed, or an alarm won’t stop.</li>
-  <li>Request daily weight, glucose check (if ordered), or to re-check vitals if you feel off.</li>
+  <li>Usa el timbre para pedir ayuda para ir al baño o caminar en el pasillo.</li>
+  <li>Pide ropa de cama limpia, artículos de higiene o ayuda para reacomodarte en la cama.</li>
+  <li>Avísales si la sonda Foley no drena, el bulbo JP no se mantiene comprimido o una alarma no se detiene.</li>
+  <li>Solicita peso diario, control de glucosa (si está indicado) o repetir signos vitales si no te sientes bien.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo que no manejan (límites)</h2>
 <ul>
-  <li>They don’t give or change medicines, oxygen settings, or IV fluids—your nurse/provider does.</li>
-  <li>They don’t interpret labs or make medical decisions—concerns are routed to the nurse.</li>
-  <li>They don’t set discharge plans, refills, or paperwork—your nurse/coordinator handles those.</li>
+  <li>No administran ni cambian medicinas, oxígeno ni líquidos IV — eso lo hace tu enfermero/a o médico.</li>
+  <li>No interpretan análisis ni toman decisiones médicas — las inquietudes se derivan al enfermero/a.</li>
+  <li>No definen planes de alta, recetas ni papeleo — eso lo maneja tu enfermero/a o coordinador.</li>
 </ul>
 
-<p class="disclaimer">Informational only; titles and duties vary by hospital. Follow your team’s instructions.</p>
-
-
+<p class="disclaimer">Solo con fines informativos; los títulos y funciones varían según el hospital. Sigue siempre las indicaciones de tu equipo.</p>
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
