--- a/es/hub/transplant/surgery/staff/or-nurse.html
+++ b/es/hub/transplant/surgery/staff/or-nurse.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Surgery Staff: OR Nurse</title>
+  <title>Personal Quirúrgico: Enfermero/a de Quirófano (Instrumentista)</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -18,51 +18,52 @@
     <div data-include="/includes_es/transplant-surgery-subnav.html"></div>
     <div data-include="/includes_es/transplant-surgery-staff-subnav.html"></div>
 
-<h1>OR Nurse (Scrub)</h1>
+<h1>Enfermero/a de Quirófano (Instrumentista)</h1>
 
-<h2>Short Description</h2>
+<h2>Descripción breve</h2>
 <p>
-  The OR (scrub) nurse keeps the sterile field safe and the operation moving.
-  They prepare instruments, anticipate the surgeon’s needs, and help prevent errors.
+  El enfermero/a instrumentista protege el campo estéril y mantiene la operación en marcha.
+  Prepara instrumentos, anticipa las necesidades del cirujano y ayuda a prevenir errores.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades principales</h2>
 <ul>
-  <li>Set up and maintain the sterile field; ensure correct instruments and supplies are ready.</li>
-  <li>Participate in safety checks (“time-out”) for identity, procedure, and site.</li>
-  <li>Pass instruments and sutures, handle tissue and specimens correctly, and track implants/stents.</li>
-  <li>Count sponges/needles/instruments with the circulating nurse—before, during, and after the case.</li>
-  <li>Help with patient positioning and skin prep/draping to protect nerves and skin.</li>
-  <li>Watch for breaks in sterility and equipment issues; speak up immediately to keep you safe.</li>
+  <li>Preparar y mantener el campo estéril; asegurar que los instrumentos y suministros correctos estén listos.</li>
+  <li>Participar en las verificaciones de seguridad (“pausa quirúrgica”) para identidad, procedimiento y sitio.</li>
+  <li>Pasar instrumentos y suturas, manejar tejidos y muestras correctamente, y llevar registro de implantes/stents.</li>
+  <li>Contar gasas/agujas/instrumentos con el enfermero/a circulante — antes, durante y después de la cirugía.</li>
+  <li>Ayudar con el posicionamiento del paciente y la preparación/colocación de campos para proteger nervios y piel.</li>
+  <li>Detectar rupturas de esterilidad o problemas con el equipo; avisar de inmediato para mantener la seguridad.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas con los que trabajan</h2>
 <ul>
-  <li><strong>Breaks in sterility:</strong> detect and correct quickly to avoid infection risk.</li>
-  <li><strong>Count mismatches:</strong> resolve with the team before closing.</li>
-  <li><strong>Equipment problems:</strong> instrument failure, battery/cord issues, backup set requests.</li>
-  <li><strong>Specimen handling:</strong> correct labeling and handoff for pathology/microbiology.</li>
-  <li><strong>Positioning/pressure:</strong> padding and re-checks to prevent pressure injuries.</li>
+  <li><strong>Rupturas de esterilidad:</strong> identificarlas y corregirlas rápidamente para evitar riesgo de infección.</li>
+  <li><strong>Diferencias en conteos:</strong> resolver con el equipo antes de cerrar la cirugía.</li>
+  <li><strong>Problemas de equipo:</strong> fallas en instrumentos, baterías/cables, solicitud de juegos de respaldo.</li>
+  <li><strong>Manejo de muestras:</strong> etiquetado correcto y entrega a patología/microbiología.</li>
+  <li><strong>Posicionamiento/presión:</strong> colocar acolchados y hacer revisiones para prevenir lesiones por presión.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo acudir a ellos</h2>
 <ul>
-  <li>You’ll meet the scrub and circulating nurses in the OR before anesthesia. They confirm your identity, allergies, and procedure.</li>
-  <li>During surgery you’re asleep—the scrub nurse works at the sterile field with the surgeon.</li>
-  <li>After surgery, your point of contact is the <strong>PACU nurse</strong> and then the <strong>inpatient/transplant unit nurse</strong>.</li>
+  <li>Conocerás al instrumentista y al enfermero/a circulante en el quirófano antes de la anestesia. Confirmarán tu identidad, alergias y procedimiento.</li>
+  <li>Durante la cirugía estarás dormido — el instrumentista trabaja en el campo estéril junto al cirujano.</li>
+  <li>Después de la cirugía, tu contacto será el <strong>enfermero/a de recuperación (PACU)</strong> y luego el <strong>enfermero/a de la unidad de trasplante/hospitalización</strong>.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo que no manejan (límites)</h2>
 <ul>
-  <li>They don’t manage long-term medicines or clinic follow-up—your transplant providers do.</li>
-  <li>They don’t handle scheduling, refills, or insurance forms—coordinators and the floor team handle those.</li>
-  <li>They don’t provide post-op phone triage—use your clinic’s on-call process.</li>
+  <li>No gestionan medicamentos a largo plazo ni seguimiento clínico — eso corresponde a tu equipo de trasplante.</li>
+  <li>No se encargan de programación, recetas o seguros — eso lo manejan coordinadores y el equipo de hospitalización.</li>
+  <li>No ofrecen orientación telefónica postoperatoria — usa el proceso de guardia de tu clínica.</li>
 </ul>
 
-<p class="disclaimer">Informational only; titles vary by hospital. In some centers, a scrub technologist shares these tasks with or instead of a scrub nurse.</p>
+<p class="disclaimer">Solo con fines informativos; los títulos varían según el hospital. En algunos centros, un tecnólogo quirúrgico comparte o asume estas tareas en lugar de un enfermero/a instrumentista.</p>
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
