--- a/es/hub/transplant/surgery/staff/physical-therapist.html
+++ b/es/hub/transplant/surgery/staff/physical-therapist.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Surgery Staff: PACU/Inpatient Nurse</title>
+  <title>Personal Quirúrgico: Fisioterapeuta</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -18,50 +18,50 @@
     <div data-include="/includes_es/transplant-surgery-subnav.html"></div>
     <div data-include="/includes_es/transplant-surgery-staff-subnav.html"></div>
 
-<h1>Physical Therapist</h1>
+<h1>Fisioterapeuta</h1>
 
-<h2>Short Description</h2>
+<h2>Descripción breve</h2>
 <p>
-  The physical therapist helps you move safely after surgery. They teach how to get in/out of bed,
-  walk steadily, handle stairs, and set a simple plan so home is safe on day one.
+  El fisioterapeuta te ayuda a moverte con seguridad después de la cirugía. Enseña cómo entrar y salir de la cama,
+  caminar con estabilidad, subir escaleras y organizar un plan sencillo para que tu hogar sea seguro desde el primer día.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades principales</h2>
 <ul>
-  <li><strong>Bed mobility & transfers:</strong> log-roll out of bed, sit-to-stand, safe chair and toilet transfers.</li>
-  <li><strong>Gait training:</strong> first hallway walks, pacing and posture, device use if needed (walker/cane).</li>
-  <li><strong>Stairs & home simulation:</strong> practice steps and obstacles you’ll have at home.</li>
-  <li><strong>Balance & fall prevention:</strong> strategies when you’re fatigued or on new meds.</li>
-  <li><strong>Activity plan:</strong> a simple daily walking program and how to progress it after discharge.</li>
+  <li><strong>Movilidad en cama y transferencias:</strong> giro en bloque para levantarse, pasar de sentado a de pie, transferencias seguras a silla e inodoro.</li>
+  <li><strong>Entrenamiento de la marcha:</strong> primeras caminatas por el pasillo, ritmo y postura, uso de dispositivos si se necesita (andador/bastón).</li>
+  <li><strong>Escaleras y simulación del hogar:</strong> práctica de escalones y obstáculos que tendrás en casa.</li>
+  <li><strong>Equilibrio y prevención de caídas:</strong> estrategias cuando estés fatigado o con nuevos medicamentos.</li>
+  <li><strong>Plan de actividad:</strong> un programa sencillo de caminatas diarias y cómo progresarlo tras el alta.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas con los que trabajan</h2>
 <ul>
-  <li><strong>Weakness or pain</strong> that makes moving tough—modify technique and pace.</li>
-  <li><strong>Dizziness/low BP</strong> when standing—safety first, sit/lie back down, notify the nurse.</li>
-  <li><strong>Line/drain safety:</strong> manage Foley/IV/JP tubing during walking to avoid tugs or trips.</li>
-  <li><strong>Core protection:</strong> avoid strain on the incision while you learn new movement patterns.</li>
+  <li><strong>Debilidad o dolor</strong> que dificultan moverse — ajustar técnica y ritmo.</li>
+  <li><strong>Mareos o presión baja</strong> al ponerse de pie — priorizar seguridad, sentarse/acostarse y notificar al enfermero/a.</li>
+  <li><strong>Seguridad con líneas y drenajes:</strong> manejar sonda Foley, vías IV y tubos JP durante la caminata para evitar tirones o tropiezos.</li>
+  <li><strong>Protección del abdomen:</strong> evitar esfuerzo sobre la incisión mientras aprendes nuevos patrones de movimiento.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo acudir a ellos</h2>
 <ul>
-  <li><strong>On the unit:</strong> usually day 1–2 after surgery for evaluation, walks, and (if needed) a stair test before discharge.</li>
-  <li><strong>Before discharge:</strong> confirm your home setup (stairs, railings, sleeping location) and get a written walking plan.</li>
-  <li><strong>After discharge:</strong> if you’re deconditioned or unsteady, ask your clinic about home health or outpatient PT.</li>
+  <li><strong>En la unidad:</strong> normalmente en los días 1–2 después de la cirugía para evaluación, caminatas y (si es necesario) prueba de escaleras antes del alta.</li>
+  <li><strong>Antes del alta:</strong> confirmar la preparación de tu casa (escaleras, pasamanos, lugar para dormir) y recibir un plan escrito de caminatas.</li>
+  <li><strong>Después del alta:</strong> si te sientes débil o inestable, pregunta en la clínica por fisioterapia domiciliaria o ambulatoria.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo que no manejan (límites)</h2>
 <ul>
-  <li>They don’t change medicines or lifting restrictions—your clinical team does.</li>
-  <li>They don’t remove drains or adjust wound vacs—nurse/surgeon manage those.</li>
-  <li>They can recommend equipment (walker/cane), but prescriptions/orders come from your provider.</li>
+  <li>No cambian medicamentos ni restricciones de peso — eso lo define tu equipo médico.</li>
+  <li>No retiran drenajes ni ajustan sistemas de vacío de heridas — lo hacen el cirujano o el enfermero/a.</li>
+  <li>Pueden recomendar equipo (andador/bastón), pero las recetas/órdenes las da tu médico.</li>
 </ul>
 
-<p class="disclaimer">Informational only; roles vary by hospital. Follow your team’s specific instructions.</p>
-
+<p class="disclaimer">Solo con fines informativos; los roles varían según el hospital. Sigue siempre las instrucciones específicas de tu equipo.</p>
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
