--- a/es/hub/transplant/surgery/staff/circulating-nurse.html
+++ b/es/hub/transplant/surgery/staff/circulating-nurse.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Surgery Staff: PACU/Inpatient Nurse</title>
+  <title>Personal Quirúrgico: Enfermero/a Circulante</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -18,52 +18,52 @@
     <div data-include="/includes_es/transplant-surgery-subnav.html"></div>
     <div data-include="/includes_es/transplant-surgery-staff-subnav.html"></div>
 
-<h1>Circulating Nurse</h1>
+<h1>Enfermero/a Circulante</h1>
 
-<h2>Short Description</h2>
+<h2>Descripción breve</h2>
 <p>
-  The circulating nurse runs the operating room outside the sterile field. They coordinate safety checks,
-  get equipment/supplies, document the case, and keep communication flowing so surgery stays safe and smooth.
+  El enfermero/a circulante coordina el quirófano fuera del campo estéril. Supervisa las verificaciones de seguridad,
+  consigue equipo y suministros, documenta el caso y mantiene la comunicación para que la cirugía sea segura y fluida.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades principales</h2>
 <ul>
-  <li><strong>Safety checks:</strong> lead the “time-out” (right patient, procedure, side), allergy review, implant/stent checks.</li>
-  <li><strong>Positioning & protection:</strong> help place padding, warming blankets, and leg compression devices to prevent injuries and clots.</li>
-  <li><strong>Equipment & supplies:</strong> bring in what the sterile team needs; troubleshoot devices and call for backups.</li>
-  <li><strong>Counts & documentation:</strong> perform sponge/needle/instrument counts with the scrub nurse and chart critical events and specimens.</li>
-  <li><strong>Medication & specimen handoff:</strong> verify labels, doses, timing (e.g., antibiotics) and route specimens to lab/pathology correctly.</li>
-  <li><strong>Communication:</strong> coordinate with anesthesia, the transplant team, and (via policy) updates to your family/waiting area.</li>
+  <li><strong>Verificaciones de seguridad:</strong> dirigir la “pausa de seguridad” (paciente correcto, procedimiento correcto, lado correcto), revisar alergias, verificar implantes/stents.</li>
+  <li><strong>Posicionamiento y protección:</strong> ayudar a colocar acolchados, mantas térmicas y dispositivos de compresión en las piernas para prevenir lesiones y coágulos.</li>
+  <li><strong>Equipo y suministros:</strong> traer lo que necesita el equipo estéril; resolver fallos de dispositivos y pedir reemplazos.</li>
+  <li><strong>Conteos y documentación:</strong> realizar conteos de gasas/agujas/instrumental con el enfermero/a instrumentista y registrar eventos críticos y muestras.</li>
+  <li><strong>Entrega de medicamentos y muestras:</strong> verificar etiquetas, dosis, tiempos (ej. antibióticos) y enviar las muestras correctamente a laboratorio/patología.</li>
+  <li><strong>Comunicación:</strong> coordinar con anestesia, el equipo de trasplante y, según la política, dar actualizaciones a tu familia/sala de espera.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas con los que trabajan</h2>
 <ul>
-  <li><strong>Breaks in sterility:</strong> identify and correct immediately.</li>
-  <li><strong>Count discrepancies:</strong> pause and resolve before closing.</li>
-  <li><strong>Equipment failures:</strong> obtain replacements, adjust settings, or call biomed/OR support.</li>
-  <li><strong>Temperature & pressure risks:</strong> maintain warmers and padding to prevent hypothermia and pressure injuries.</li>
-  <li><strong>Specimen/implant tracking:</strong> ensure accurate labels, logs, and chain-of-custody.</li>
+  <li><strong>Rupturas de esterilidad:</strong> identificarlas y corregirlas de inmediato.</li>
+  <li><strong>Diferencias en conteos:</strong> pausar y resolver antes de cerrar la cirugía.</li>
+  <li><strong>Fallos de equipo:</strong> obtener reemplazos, ajustar configuraciones o llamar al soporte biomédico/quirúrgico.</li>
+  <li><strong>Riesgos de temperatura y presión:</strong> mantener calentadores y acolchados para prevenir hipotermia y lesiones por presión.</li>
+  <li><strong>Seguimiento de muestras/implantes:</strong> asegurar etiquetas, registros y cadena de custodia precisos.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo acudir a ellos</h2>
 <ul>
-  <li><strong>Pre-op holding/OR check-in:</strong> they’ll confirm your identity, allergies, procedure, and any special concerns (e.g., difficult IV access, sensitive skin, devices).</li>
-  <li><strong>During surgery:</strong> you’ll be asleep—the circulating nurse advocates for safety and keeps the room running.</li>
-  <li><strong>After surgery:</strong> your point of contact becomes the <strong>PACU nurse</strong>, then the <strong>inpatient/transplant unit nurse</strong>. The circulating nurse doesn’t follow you after transfer.</li>
+  <li><strong>Área preoperatoria/ingreso al quirófano:</strong> confirmarán tu identidad, alergias, procedimiento y cualquier preocupación especial (ej. acceso venoso difícil, piel sensible, dispositivos).</li>
+  <li><strong>Durante la cirugía:</strong> estarás dormido — el enfermero/a circulante vela por tu seguridad y mantiene el quirófano en orden.</li>
+  <li><strong>Después de la cirugía:</strong> tu contacto será el <strong>enfermero/a de recuperación (PACU)</strong> y luego el <strong>enfermero/a de la unidad de trasplante/hospitalización</strong>. El enfermero/a circulante no te acompaña tras la transferencia.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo que no manejan (límites)</h2>
 <ul>
-  <li>They don’t manage long-term medications or clinic follow-up—your transplant team does.</li>
-  <li>They don’t handle refills, insurance, or discharge paperwork—unit staff/coordinators handle those.</li>
-  <li>They don’t provide post-op phone triage—use your clinic’s on-call process.</li>
+  <li>No gestionan medicamentos a largo plazo ni seguimiento clínico — eso lo hace tu equipo de trasplante.</li>
+  <li>No tramitan recetas, seguros o papeleo de alta — eso corresponde al personal de la unidad/coordinadores.</li>
+  <li>No ofrecen orientación telefónica postoperatoria — usa el proceso de guardia de tu clínica.</li>
 </ul>
 
-<p class="disclaimer">Informational only; titles and policies vary by hospital. Some tasks may be shared with surgical technologists or other OR staff.</p>
-
+<p class="disclaimer">Solo con fines informativos; los títulos y políticas varían según el hospital. Algunas tareas pueden ser compartidas con tecnólogos quirúrgicos u otro personal del quirófano.</p>
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
