--- a/es/hub/transplant/surgery/staff/pacu-nurse.html
+++ b/es/hub/transplant/surgery/staff/pacu-nurse.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Surgery Staff: PACU/Inpatient Nurse</title>
+  <title>Personal Quirúrgico: Enfermero/a de Recuperación (PACU)</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -18,54 +18,55 @@
     <div data-include="/includes_es/transplant-surgery-subnav.html"></div>
     <div data-include="/includes_es/transplant-surgery-staff-subnav.html"></div>
 
-<h1>PACU Nurse</h1>
+<h1>Enfermero/a de Recuperación (PACU)</h1>
 
-<h2>Short Description</h2>
+<h2>Descripción breve</h2>
 <p>
-  The PACU (recovery) nurse cares for you as you wake up from anesthesia. They manage pain and nausea,
-  watch your breathing, blood pressure, and urine, and get you stable and comfortable for transfer to the floor.
+  El enfermero/a de recuperación (PACU) te cuida mientras despiertas de la anestesia. Maneja el dolor y las náuseas,
+  controla tu respiración, presión arterial y orina, y te estabiliza para una transferencia segura a la unidad.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades principales</h2>
 <ul>
-  <li>Monitor airway, breathing, oxygen, heart rhythm, and blood pressure as anesthesia wears off.</li>
-  <li>Control pain and nausea; adjust meds quickly so you can breathe deeply and keep medicines down.</li>
-  <li>Check incision, dressings, and lines/devices (Foley catheter, IVs, arterial line if present, JP drain, wound vac).</li>
-  <li>Track urine output from the Foley and report changes to the team.</li>
-  <li>Warmth and comfort measures (blankets, positioning), safety checks, and fall prevention.</li>
-  <li>Start early breathing exercises (incentive spirometer) and help with the first short sit-up or dangle at bedside when safe.</li>
-  <li>Coordinate updates with your family and prepare you for transfer to the surgical/transplant unit.</li>
+  <li>Monitorear vía aérea, respiración, oxígeno, ritmo cardíaco y presión arterial mientras pasa la anestesia.</li>
+  <li>Controlar dolor y náuseas; ajustar medicinas rápidamente para que respires profundo y toleres los medicamentos.</li>
+  <li>Revisar incisión, vendajes y dispositivos (sonda Foley, vías IV, línea arterial si está presente, drenaje JP, terapia de vacío en heridas).</li>
+  <li>Registrar la producción de orina de la sonda Foley y reportar cambios al equipo.</li>
+  <li>Proporcionar calor y comodidad (mantas, posición), realizar verificaciones de seguridad y prevenir caídas.</li>
+  <li>Iniciar ejercicios de respiración temprana (espirómetro incentivador) y ayudarte con la primera sedestación corta al borde de la cama cuando sea seguro.</li>
+  <li>Coordinar actualizaciones con tu familia y prepararte para la transferencia a la unidad quirúrgica/de trasplante.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas con los que trabajan</h2>
 <ul>
-  <li><strong>Pain not controlled</strong> or pain that spikes with movement or coughing.</li>
-  <li><strong>Nausea/vomiting</strong> that makes it hard to take meds—rapid anti-nausea treatment.</li>
-  <li><strong>Breathing concerns:</strong> low oxygen, shallow breaths; reminders and support with the spirometer.</li>
-  <li><strong>Blood pressure shifts:</strong> high or low readings managed with the anesthesia/surgery team.</li>
-  <li><strong>Low urine output or Foley issues:</strong> kinks, positioning, or need for team evaluation.</li>
-  <li><strong>Shivering/cold</strong> after anesthesia—warming blankets and monitoring.</li>
-  <li><strong>Confusion or agitation</strong> on wake-up (short-lived “emergence” effects), treated and re-oriented calmly.</li>
+  <li><strong>Dolor no controlado</strong> o dolor que aumenta con movimiento o tos.</li>
+  <li><strong>Náusea/vómito</strong> que dificulta tomar medicinas — tratamiento rápido con antieméticos.</li>
+  <li><strong>Problemas respiratorios:</strong> bajo oxígeno, respiración superficial; recordatorios y apoyo con el espirómetro.</li>
+  <li><strong>Variaciones de presión arterial:</strong> lecturas altas o bajas manejadas junto con anestesia/cirugía.</li>
+  <li><strong>Baja producción de orina o problemas con la sonda Foley:</strong> dobleces, mala posición o necesidad de evaluación médica.</li>
+  <li><strong>Escalofríos/frío</strong> tras la anestesia — mantas térmicas y monitoreo.</li>
+  <li><strong>Confusión o agitación</strong> al despertar (efectos breves de la “emergencia”), tratados con calma y reorientación.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo acudir a ellos</h2>
 <ul>
-  <li>While you are in PACU (the recovery room) after surgery—use the call button or speak up for pain, nausea, breathing help, or if something feels wrong.</li>
-  <li>Before transfer, ask about your pain plan, nausea plan, Foley/urine goals, breathing exercises, and how to call for help on the floor.</li>
-  <li>After you leave PACU, your <strong>inpatient/transplant unit nurse</strong> becomes your first contact; they will loop in PACU/anesthesia if needed.</li>
+  <li><strong>Mientras estés en PACU</strong> (sala de recuperación) después de la cirugía — usa el timbre o pide ayuda para dolor, náusea, respiración o si algo se siente mal.</li>
+  <li><strong>Antes de la transferencia,</strong> pregunta sobre tu plan de dolor, plan de náuseas, metas de orina/sonda Foley, ejercicios de respiración y cómo pedir ayuda en la unidad.</li>
+  <li><strong>Después de salir de PACU,</strong> tu contacto principal será el <strong>enfermero/a de la unidad de trasplante/hospitalización</strong>; ellos contactan a PACU/anestesia si es necesario.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo que no manejan (límites)</h2>
 <ul>
-  <li>They don’t set long-term medication doses—your transplant providers do that.</li>
-  <li>They don’t manage insurance, forms, or discharge paperwork—unit staff/coordinators handle those.</li>
-  <li>They don’t follow you after transfer—once you’re on the floor, page the unit nurse for anything you need.</li>
+  <li>No establecen dosis de medicamentos a largo plazo — eso lo hacen tus médicos de trasplante.</li>
+  <li>No gestionan seguros, formularios ni papeleo de alta — eso lo manejan coordinadores/personal de la unidad.</li>
+  <li>No te siguen después de la transferencia — una vez en la unidad, tu contacto es el enfermero/a de hospitalización.</li>
 </ul>
 
-<p class="disclaimer">Informational only; roles and policies vary by hospital. Follow your surgical team’s instructions.</p>
+<p class="disclaimer">Solo con fines informativos; los roles y políticas varían según el hospital. Sigue siempre las instrucciones de tu equipo quirúrgico.</p>
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
