--- a/es/hub/transplant/surgery/staff/surgeon.html
+++ b/es/hub/transplant/surgery/staff/surgeon.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Surgery Staff: Transplant Surgeon</title>
+  <title>Personal Quirúrgico: Cirujano de Trasplante</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -18,54 +18,55 @@
     <div data-include="/includes_es/transplant-surgery-subnav.html"></div>
     <div data-include="/includes_es/transplant-surgery-staff-subnav.html"></div>
 
-<h1>Transplant Surgeon</h1>
+<h1>Cirujano de Trasplante</h1>
 
-<h2>Short Description</h2>
+<h2>Descripción breve</h2>
 <p>
-  The transplant surgeon performs the operation, connects the new kidney to your blood vessels and bladder,
-  controls bleeding, and manages any surgical issues during the hospital stay.
+  El cirujano de trasplante realiza la operación, conecta el nuevo riñón a tus vasos sanguíneos y vejiga,
+  controla el sangrado y maneja cualquier complicación quirúrgica durante la hospitalización.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades principales</h2>
 <ul>
-  <li>Plan and perform the operation safely (incision, exposure, handling scar tissue).</li>
-  <li>Connect artery/vein to pelvic vessels so blood flows through the kidney.</li>
-  <li>Attach the ureter to the bladder; place a temporary internal stent when needed.</li>
-  <li>Decide on drains (JP) or a wound vacuum and set removal criteria.</li>
-  <li>Control bleeding, prevent clots, and protect the bladder connection (no excess tension).</li>
-  <li>Set early activity limits and coordinate pain control with anesthesia and the inpatient team.</li>
-  <li>Update family after surgery and when you’re settled in recovery or your room.</li>
+  <li>Planear y realizar la cirugía de manera segura (incisión, exposición, manejo de tejido cicatricial).</li>
+  <li>Conectar arteria y vena a los vasos pélvicos para que la sangre fluya a través del riñón.</li>
+  <li>Unir el uréter a la vejiga; colocar un stent interno temporal si es necesario.</li>
+  <li>Decidir sobre drenajes (JP) o sistemas de vacío en la herida y definir criterios de retiro.</li>
+  <li>Controlar el sangrado, prevenir coágulos y proteger la conexión a la vejiga (sin tensión excesiva).</li>
+  <li>Definir límites de actividad temprana y coordinar el control del dolor con anestesia y el equipo de hospitalización.</li>
+  <li>Actualizar a la familia después de la cirugía y cuando estés en recuperación o en tu habitación.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas con los que trabajan</h2>
 <ul>
-  <li>Complex anatomy or prior abdominal surgeries that change the approach.</li>
-  <li>Bleeding, hematoma, or need to return to the OR if bleeding persists.</li>
-  <li>Urine leak or ureteral narrowing (may require stent/exchange or procedure).</li>
-  <li>Fluid collections near the kidney (seroma/lymphocele) that sometimes need drainage.</li>
-  <li>Wound problems and incisional/inguinal hernias.</li>
-  <li>Delayed graft function—they coordinate with the medical team if dialysis is needed short term.</li>
+  <li>Anatomía compleja o cirugías abdominales previas que modifican el abordaje.</li>
+  <li>Sangrado, hematomas o necesidad de regresar a quirófano si el sangrado persiste.</li>
+  <li>Fugas de orina o estrechamiento del uréter (puede requerir stent/cambio o procedimiento).</li>
+  <li>Colecciones de líquido cerca del riñón (seroma/linfocele) que a veces necesitan drenaje.</li>
+  <li>Problemas de la herida y hernias en la incisión/ingle.</li>
+  <li>Función retardada del injerto — coordinan con el equipo médico si se requiere diálisis temporal.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo acudir a ellos</h2>
 <ul>
-  <li><strong>Pre-op consult:</strong> get incision/approach details, device plans (stent, JP, wound vac), and specific risks for you.</li>
-  <li><strong>In hospital:</strong> questions about lines/drains, incision concerns, or if pain/swelling worsens around the surgical site.</li>
-  <li><strong>After discharge:</strong> new or worsening redness, drainage, bulge at the incision, persistent fluid from a drain, or trouble after stent removal—contact the transplant team; the surgeon’s group will be looped in.</li>
+  <li><strong>Consulta preoperatoria:</strong> obtener detalles sobre incisión/abordaje, planes de dispositivos (stent, JP, sistema de vacío) y riesgos específicos para ti.</li>
+  <li><strong>Durante la hospitalización:</strong> dudas sobre drenajes/líneas, problemas con la incisión o si el dolor/inflamación empeora en el área quirúrgica.</li>
+  <li><strong>Después del alta:</strong> enrojecimiento nuevo o creciente, secreción, abultamiento en la incisión, salida persistente de un drenaje o problemas tras retirar el stent — contacta al equipo de trasplante; el grupo de cirugía se involucrará.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo que no manejan (límites)</h2>
 <ul>
-  <li>Long-term medication dosing or lab-by-lab immunosuppression changes — nephrologist/pharmacist manage this.</li>
-  <li>Routine refills, day-to-day scheduling, and forms — coordinator/social worker/clinic handle these.</li>
-  <li>Non-surgical symptoms (fever, blood pressure, electrolytes) — call the transplant clinic; they will route as needed.</li>
-  <li>Emergencies (severe chest pain, breathing trouble, heavy bleeding) — use on-call instructions or 911.</li>
+  <li>No ajustan medicación a largo plazo ni inmunosupresión dosis a dosis — esto lo manejan el nefrólogo/farmacéutico.</li>
+  <li>No gestionan recetas rutinarias, programación diaria ni formularios — lo hace el coordinador/trabajo social/clínica.</li>
+  <li>No manejan síntomas no quirúrgicos (fiebre, presión arterial, electrolitos) — llama a la clínica de trasplante; ellos derivan según sea necesario.</li>
+  <li>No atienden emergencias (dolor intenso en el pecho, dificultad respiratoria, sangrado abundante) — sigue las instrucciones de guardia o llama al 911.</li>
 </ul>
 
-<p class="disclaimer">Informational only; roles vary by center. Follow your surgical team’s specific instructions.</p>
+<p class="disclaimer">Solo con fines informativos; los roles varían según el centro. Sigue siempre las instrucciones específicas de tu equipo quirúrgico.</p>
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
